add home content

--- a/css/media.css
+++ b/css/media.css
@@ -1,16 +1,14 @@
 
-@media only screen and (min-width: 1300px) {
-/*	.container {
-		padding-left: 10%;
-		padding-right: 10%;
-	}
-	.nav-fixed {
-		padding-left: 10%;
-		padding-right: 10%;
-	}
+@media only screen and (max-width: 765px) {
+	.nav-fixed__ul{
+		flex-direction: column;
+		align-items: flex-end;
+}
+
+/* 	
 	.about-us__width {
 		max-width: 35vw;
-	}*/
+	} */
 }
 @media only screen and (max-width: 1000px) {
 /*	.container__h2 {
@@ -19,15 +17,15 @@
 	.about-us {
 		min-height: 500px;
 	}*/
-	.site-part{
+/* 	.site-part{
 		display: grid;
 		max-width: 1500px;
 		margin: 0 auto;	
 		grid-template-columns: 50% 50%;
-	}
+	} */
 }
 @media only screen and (max-width: 800px) {
-	.container__h2 {
+/* 	.container__h2 {
 		font-size: 50px;
 	}
 	.about-us {
@@ -35,6 +33,6 @@
 	}
 	.about-us__text {
 		font-size: 15px;
-	}
+	} */
 	/*	nav: ;*/
 }
