--- a/css/style.css
+++ b/css/style.css
@@ -7,108 +7,13 @@ button{
 	cursor: pointer;
 }
 
-.cointainer{
+.container{
 	max-width: 1172px;
 	margin: 0 auto;
 	padding-left: 40px;
 	padding-right: 40px;
 }
 
-
-
-.container__h1 {
-	font-size: 60px;
-	font-weight: 900;
-
-}
-
-.container__h2 {
-	font-size: 90px;
-	font-weight: 700;
-	color: white;
-}
-
-.container__h3 {}
-
-
-.home {
-	background-repeat: no-repeat;
-	background-color: white;
-	background-image: url(../img/truskawka-w-jogurcie.jpg);
-	background-position: center;
-	background-size: cover;
-	min-height: 100vh;
-}
-
-.home__h1{
-	padding-top: 20%;
-	font-size: 60px;
-	font-weight: 900;
-	font-family: "Raleway";
-	padding-bottom: 20px;
-}
-.home__p{
-	font-size: 17px;
-	max-width: 370px;
-	line-height: 1.4;
-	font-weight: 300;
-	padding-bottom: 20px;	  
-}
-
-.home__button{
-	background-color: #FF6033;
-	height: 55px;
-	width: 200px;
-	font-size: 20px;
-	font-weight: 300;
-	color: #fff;
-	border: 0;
-	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
-}
-  
-.container__button{
-	font-size: 20px;
-	color: #fff;
-	background-color: #ff6033;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	border: none;
-	padding: 15px 25px;
-	font-weight: 300;
-	font-family: 'Raleway', sans-serif;
-	text-transform: uppercase;
-	margin-top: 20px;
-}
-
-
-
-.container__div-text {
-	max-width: 375px;
-}
-
-/*
-@media (orientation: portrait){
-	.home {
-		background-image: url(../img/truskawka-w-jogurcie-mobile.png);
-	}
-}*/
-
-.scroll-fixed {
-	position: fixed;
-	margin: 0 auto;
-	display: block;
-	left: 0;
-	right: 0;
-	bottom: 10vh;
-	animation-name: grow;
-	animation-duration: 2s;
-	animation-iteration-count: infinite;
-}
-@keyframes grow {
-	0% 		{transform: scale(1);}
-	50%		{transform: scale(1.3);}
-	100%	{transform: scale(1);}
-}
-/*  NAV	*/
 .nav-fixed {
 	position: fixed;
 	height: 100px;	
@@ -155,62 +60,116 @@ button{
 }
 
 .nav-fixed--smaller{
-	background-color: rgba(255, 255, 255, 0.7);	/* instead of none	*/
-	height: 70px; 								/* instead of 100px	*/
+	background-color: rgba(255, 255, 255, 0.7);
+	height: 70px; 								
 	padding-top: 10px;
-/*	*/
-}
-
-
-/*  SECTIION "ABOUT US"	*/
-
-.about-us__img {
-	width: 100%;
-}
-.about-us__text {
-	color: white;
-}
-
-.about-us__p {
-	margin-bottom: 20px;
-	text-align: justify;
-	hyphens: auto;
 }
 
 
 
+.scroll-fixed {
+	position: fixed;
+	margin: 0 auto;
+	display: block;
+	left: 0;
+	right: 0;
+	bottom: 10vh;
+	animation-name: grow;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+}
+@keyframes grow {
+	0% 		{transform: scale(1);}
+	50%		{transform: scale(1.3);}
+	100%	{transform: scale(1);}
+}
 
-/* BLOCK .site-part	- site's part container for other blocks*/
-.site-part {
-	background-color: #fff;
-	padding-top: 100px;
-	padding-bottom: 100px;
+
+.home {
+	background-repeat: no-repeat;
+	background-color: white;
+	background-image: url(../img/truskawka-w-jogurcie.jpg);
+	background-position: center;
+	background-size: cover;
+	min-height: 100vh;
 	box-sizing: border-box;
+
 }
 
-.site-part--blue {
-	background-color: #70bfff;
+.home__container{
+	max-width: 1172px;
+	margin: 0 auto;
+	padding-left: 40px;
+	padding-right: 40px;
+	padding-top: 25%;
+	padding-bottom: 40px;
 }
-.site-part--turkus {
+
+.home__h1{
+	font-size: 60px;
+	font-weight: 900;
+	font-family: "Raleway";
+	padding-bottom: 20px;
+}
+.home__p{
+	font-size: 17px;
+	max-width: 370px;
+	line-height: 1.4;
+	font-weight: 300;
+	padding-bottom: 20px;	  
+}
+
+.home__button{
+	background-color: #FF6033;
+	height: 55px;
+	width: 200px;
+	font-size: 20px;
+	font-weight: 300;
+	color: #fff;
+	border: 0;
+	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+
+.about-us{
 	background-color: #00bdbd;
 }
 
-
-.site-part__grid{
+.about-us__container{
+	max-width: 1172px;
+	margin: 0 auto;
+	padding: 40px;
 	display: grid;
-	max-width: 1500px;
-	margin: 0 auto;	
-	grid-template-columns: 50% 50%;
-	padding-left: 165px;
-	padding-right: 165px;
-	box-sizing: border-box;
+	grid-template-columns: 1fr 1fr;
 }
-.site-part__block-center{
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.about-us__img {
+	width: 100%;
+	margin: auto;
+	/* background-image: url(../img/plate-of-berriers.png); */
 }
-/* END -------------------BLOCK .site-part	- container for other blocks*/
+.about-us__text {
+	color: white;
+	max-width: 500px;
+	padding-left: 40px;
+	padding-top: 20%;
+}
+.about-us__h2{
+	font-size: 90px;
+	font-weight: 700;
+	padding-bottom: 20px;
+}
+.about-us__p {
+	font-size: 17px;
+	font-weight: 300;
+	margin-bottom: 20px;
+	hyphens: auto;
+	line-height: 1.4;
+}
+  
+
+
+
+
 
 /* BLOCK .services	- list of services with img icon*/
 .services{
