--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,7 @@ button{
 	border: none;
 	font-family: Raleway;
 	box-sizing: border-box;
+	cursor: pointer;
 }
 
 .blog{
@@ -409,6 +410,8 @@ button{
 	width: 372px;
 	height: 312px;
 	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+	position: relative;
+	cursor: pointer;
 }
 .blog__image-1{
 	background: url(../img/blog-1.png) center no-repeat content-box;
@@ -426,6 +429,10 @@ button{
 	border-radius: 5px;
 	margin-top: 30px;
 	margin-left: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 .blog__day{
     font-family: 'Raleway', sans-serif;
@@ -439,3 +446,31 @@ button{
 	font-weight: 700;
 	color: white;
 }
+.blog__gradient{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 150px;
+	background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
+	display: flex;
+	flex-direction: column;
+	padding-left: 23px;
+	padding-bottom: 23px;
+	padding-right: 43px;
+	box-sizing: border-box;
+	justify-content: flex-end;
+}
+.blog__h4{
+	font-size: 20px;
+	color: white;
+	font-weight: 700;
+}
+.blog__author{
+	font-size: 14px;
+	color: white;
+	margin-top: 23px;
+}
+
+
+
+  
