add correct blog__image links

--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,6 @@ button{
 	height: 312px;
 	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
 	position: relative;
-	cursor: pointer;
 }
 .blog__image-1{
 	background: url(../img/blog-1.png) center no-repeat content-box;
@@ -460,10 +459,14 @@ button{
 	box-sizing: border-box;
 	justify-content: flex-end;
 }
-.blog__h4{
+.blog__a{
 	font-size: 20px;
 	color: white;
 	font-weight: 700;
+	text-decoration: none;
+}
+.blog__a:hover{
+	text-decoration: underline;
 }
 .blog__author{
 	font-size: 14px;
