--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ button{
 	width: 100vw;
 	transition: 300ms;
 	padding-top: 30px;
+	z-index: 100;
 }
 .nav-fixed__flex{
 	display: flex;
@@ -65,8 +66,6 @@ button{
 	height: 70px; 								
 	padding-top: 10px;
 }
-
-
 
 .scroll-fixed {
 	position: fixed;
@@ -135,7 +134,7 @@ button{
 .about-us__container{
 	max-width: 1172px;
 	margin: 0 auto;
-	padding: 40px;
+	padding: 50px 40px;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 }
@@ -373,6 +372,7 @@ button{
 	max-width: 1172px;
 	margin: 0 auto;
 	padding: 40px;
+	padding-top: 100px;
 }
 .blog__h2{
 	font-size: 90px;
@@ -474,6 +474,79 @@ button{
 	margin-top: 23px;
 }
 
+.contact{
+	background-repeat: no-repeat;
+	background-color: white;
+	background-image: url(../img/contact-bg.png);
+	background-position: center;
+	background-size: cover;
+}
+.contact__container{
+	max-width: 1172px;
+	margin: 0 auto;
+	padding: 40px;
+	padding-bottom: 100px;
+}
+.contact__h2{
+	color:#262626;
+	font-size:90px;
+	font-weight: 700;
+	text-align: center;
+	margin-top: 50px;
+}
+.contact__p{
+	color:#262626;
+	font-size: 17px;
+	font-weight: 300;
+	text-align: center;
+	max-width: 577px;
+	margin: 50px auto ;
+	line-height: 1.4;
+	width: 350px;
+}
+.contact__split{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
+.contact__input{
+	background-color: rgba(0, 196, 196, 0.5);
+	color: white;
+	font-size: 15px;
+	font-weight: 700;
+	width: 500px;
+	height: 50px;
+	padding-left: 20px;
+	padding-right: 10px;
+	border: none;
+	margin-bottom: 15px;
+	font-family: 'Raleway', sans-serif;
+	box-sizing: border-box;
+}
+.contact__input::placeholder{
+	color: white;
+	font-weight: 300;
+}
+.contact__input:focus{
+	background-color: rgb(0, 196, 196);
+	border-left: #355B82 solid 6px;
+	padding-left: 14px;
+	outline: none;
+}
+.contact__input--textarea{
+	padding-top: 15px;
+	min-height: 250px;
+	resize: none;
+	line-height: 1.6;
 
-
-  
+}
+.contact__address{
+	display: flex;
+	flex-direction: column;
+	color: #262626;
+	font-weight: 300;
+	line-height: 1.4;
+	padding-left: 80px;
+}
+.contact__bold{
+	font-weight: 700;
+}
