--- a/css/style.css
+++ b/css/style.css
@@ -550,3 +550,40 @@ button{
 .contact__bold{
 	font-weight: 700;
 }
+
+.footer{
+	background-color: #262626;
+}
+.footer__container{
+	max-width: 1172px;
+	margin: 0 auto;
+	padding: 40px;
+	color: #B9B9B9;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.footer__code{
+	font-size: 16px;
+}
+.footer__small-logo{
+	font-size: 25px;
+	font-family: Pacifico;
+	font-style: italic;
+
+}
+.footer__design{
+	font-size: 15px;
+}
+.footer__love{
+	color: #ff2200;
+	font-weight: 800;
+}
+.footer a, .footer a:visited{
+	color: #B9B9B9;
+	font-weight: 700;
+	text-decoration: none;
+}
+.footer a:hover{
+	color: rgb(0, 196, 196)
+}
