--- a/css/media.css
+++ b/css/media.css
@@ -1,11 +1,4 @@
 
-@media only screen and (max-width: 765px) {
-	.nav-fixed__ul{
-		flex-direction: column;
-		align-items: flex-end;
-	}
-}
-
 @media only screen and (max-width: 991px) {
 	.about-us__text {
 		padding-top: 10%;
@@ -39,5 +32,24 @@
 	}
 	.subscribe__button{
 		margin-right: 200px;
+	}
+	.contact__split{
+		grid-template-columns: 2fr 1fr;
+	}
+}
+
+@media only screen and (max-width: 770px) {
+	.nav-fixed__ul{
+		flex-direction: column;
+		align-items: flex-end;
+	}
+	.contact__split{
+		display: flex;
+		flex-direction: column-reverse;
+		align-items: center;
+	}
+	.contact__form{
+		width: 100%;
+		max-width: 500px;
 	}
 }
