--- a/css/style.css
+++ b/css/style.css
@@ -568,13 +568,18 @@ button{
 .contact__split{
 	display: grid;
 	grid-template-columns: 1fr 1fr;
+	gap: 5%;
+}
+.contact__form{
+	width: 100%;
+	max-width: 500px;
 }
 .contact__input{
 	background-color: rgba(0, 196, 196, 0.5);
 	color: white;
 	font-size: 15px;
 	font-weight: 700;
-	width: 500px;
+	width: 100%;
 	height: 50px;
 	padding-left: 20px;
 	padding-right: 10px;
@@ -606,7 +611,7 @@ button{
 	color: #262626;
 	font-weight: 300;
 	line-height: 1.4;
-	padding-left: 80px;
+	padding-left: 20px;
 }
 .contact__bold{
 	font-weight: 700;
