--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,12 @@ button{
 	font-family: Raleway;
 }
 
-.container{
+/* .container{
 	max-width: 1172px;
 	margin: 0 auto;
 	padding-left: 40px;
 	padding-right: 40px;
-}
+} */
 
 .nav-fixed {
 	position: fixed;
@@ -140,27 +140,7 @@ button{
 }
 
 
-.about-us{
-	background-color: #00bdbd;
-}
-.about-us__container{
-	max-width: 1172px;
-	margin: 0 auto;
-	padding: 50px 40px;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-}
-.about-us__img {
-	width: 100%;
-	margin: auto;
-}
-.about-us__text {
-	color: white;
-	max-width: 500px;
-	padding-left: 40px;
-	padding-top: 20%;
-}
-
+/* 
 .about-us__p {
 	font-size: 17px;
 	font-weight: 300;
@@ -170,9 +150,7 @@ button{
 }
 
 
-.services{
-	background: #70BFFF;
-}
+
 
 .services__container{
 	max-width: 1172px;
@@ -181,7 +159,7 @@ button{
 	padding: 40px;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-}
+} */
 
 .services__list{
 	margin: auto;
@@ -220,33 +198,13 @@ button{
 	vertical-align: middle;
 }
 
-.services__img{
+/* .services__img{
 	background: url(../img/tomatos-parts.png) center/ 80% no-repeat content-box;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	box-sizing: border-box;
-}
-
-
-
-/* .gallery{
-
-	min-height: 800px;
 } */
-
-
-/* .gallery__p{
-	color:#262626;
-	font-size: 17px;
-	font-weight: 300;
-	text-align: center;
-	max-width: 577px;
-	margin: 50px auto ;
-	line-height: 1.4;
-} */
-
-
 
 .subscribe{
 	background: url(../img/subscribeBG.png) center/ 100% no-repeat content-box;
