--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -4,34 +4,36 @@
     padding-left: 2%;
     margin-right: auto;
     margin-left: auto;
+    box-sizing: content-box;
 }
 
-    .wrapper__axis {
-        padding-top: 100px;
-        padding-bottom: 120px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    .wrapper--full{
+        min-height: 100vh;
     }
 
-    .wrapper__group {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-    }
-        .wrapper__group--right {
+.wrapper__split {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+    
+.wrapper__bar{
+    display: flex;
+    justify-content: space-between;
+}
+    
+.wrapper__axis {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+    
+.wrapper__group {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+    .wrapper__group--right {
             align-items: flex-end;
-        }
-
-    .wrapper__split {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
     }
-
-    .wrapper__bar{
-        display: flex;
-        justify-content: space-between;
-    }
-
-
 
