--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
 
-
-/* .container{
-	max-width: 1172px;
-	margin: 0 auto;
-	padding-left: 40px;
-	padding-right: 40px;
-} */
-
 .nav-fixed {
 	position: fixed;
 	height: 100px;	
@@ -77,100 +69,13 @@
 	100%	{transform: scale(1);}
 }
 
-
-.home {
-	background-repeat: no-repeat;
-	background-color: white;
-	background-image: url(../img/truskawka-w-jogurcie.jpg);
-	background-position: center;
-	background-size: cover;
-
-	min-height: 100vh;
-	box-sizing: border-box;
-
-}
-.home__container{
-	max-width: 1172px;
-	margin: 0 auto;
-	padding-left: 40px;
-	padding-right: 40px;
-	padding-top: 25%;
-	padding-bottom: 40px;
-}
-
-.home__p{
-	font-size: 17px;
-	max-width: 370px;
-	line-height: 1.4;
-	font-weight: 300;
-	padding-bottom: 20px;	  
-}
-
-
-
-/* 
-.about-us__p {
-	font-size: 17px;
-	font-weight: 300;
-	margin-bottom: 20px;
-	hyphens: auto;
-	line-height: 1.4;
-}
-
-
-
-
-.services__container{
-	max-width: 1172px;
-	min-height: 700px;
-	margin: 0 auto;
-	padding: 40px;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-} */
-
-
-/* .services__img{
-	background: url(../img/tomatos-parts.png) center/ 80% no-repeat content-box;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	box-sizing: border-box;
-} */
-
-.subscribe{
-	background: url(../img/subscribeBG.png) center/ 100% no-repeat content-box;
-	height: 500px;
-}
-.subscribe__container{
-	max-width: 1172px;
-	margin: 0 auto;
-	padding-top: 40px;
-	padding-bottom: 40px;
-	padding-left: 40px;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
-
-.subscribe__p{
-	color:#262626;
-	font-size:17px;
-	font-weight: 300;
-	line-height: 1.4;
-	max-width: 544px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
 .subscribe__text{
 	font-weight: 300;
 	font-size: 15px;
 	height: 55px;
-	width: 570px;
+	width: 100%;
 	padding-left: 15px;
 	margin-right: 20px;
-	margin-bottom: 20px;
 	box-sizing: border-box;
 	border-style: solid;
 	border-width: 1px;
