--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -1,13 +1,10 @@
 .wrapper {
     max-width: 1172px;
-    padding-right: 2%;
-    padding-left: 2%;
+    padding-right: 40px;
+    padding-left: 40px;
     margin-right: auto;
     margin-left: auto;
     box-sizing: content-box;
-}
-
-.wrapper__split {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(12, 1fr);
 }
