--- a/css/footer.css
+++ b/css/footer.css
@@ -1,16 +1,11 @@
 .footer{
-
+    padding: 30px 0;
 }
 
 .footer__code{
 	font-size: 16px;
 }
-.footer__small-logo{
-	font-size: 25px;
-	font-family: Pacifico;
-	font-style: italic;
 
-}
 .footer__design{
 	font-size: 15px;
 }
@@ -26,5 +21,4 @@
 .footer a:hover,
 .footer a:focus{
 	color: rgb(0, 196, 196);
-	text-decoration: underline;
 }
