--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,6 @@
 	border-top: #ff6033 solid 3px;
 	transition: 1s;
 }
-.nav-fixed__logo {
-	font-family: Pacifico;
-	font-size: 50px;
-}
 
 .nav-fixed--smaller{
 	background-color: rgba(255, 255, 255, 0.7);
@@ -90,27 +86,20 @@
 	padding-left: 14px;
 }
 
-
-
-.blog__container{
-	max-width: 1172px;
-	margin: 0 auto;
-	padding: 40px;
-	padding-top: 100px;
+.logo {
+	font-family: Pacifico;
+	font-size: 50px;
 }
 
-.blog__p{
-	font-size: 17px;
-	font-weight: 300;
-	margin: 30px auto;
-	hyphens: auto;
-	line-height: 1.4;
-	width: 563px;
-	color: white;
-	text-align: center;
+.logo--small{
+	font-size: 25px;
 }
 
-.blog__images{
+
+
+
+
+.blog{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 28px;
@@ -188,32 +177,6 @@
 }
 
 
-.contact__container{
-	max-width: 1172px;
-	margin: 0 auto;
-	padding: 40px;
-	padding-bottom: 100px;
-}
-
-.contact__p{
-	color:#262626;
-	font-size: 17px;
-	font-weight: 300;
-	text-align: center;
-	max-width: 577px;
-	margin: 50px auto ;
-	line-height: 1.4;
-	width: 350px;
-}
-.contact__split{
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 5%;
-}
-.contact__form{
-	width: 100%;
-	max-width: 500px;
-}
 .contact__input{
 	background-color: rgba(0, 196, 196, 0.5);
 	color: white;
