--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,11 @@
+@media only screen and (max-width: 991px) {
 
+
+
+}
+
+
+/* 
 @media only screen and (max-width: 991px) {
 	.about-us__text {
 		padding-top: 10%;
@@ -20,7 +27,7 @@
 		padding-bottom: 40px;
 		padding-top: 40px;
 	}
-/* 	.subscribe{
+/	.subscribe{
 		background: url(../img/subscribeBG.png) center bottom/ 100% no-repeat content-box;
 		height: 400px;
 	}
@@ -32,7 +39,7 @@
 	}
 	.subscribe__button{
 		margin-right: 200px;
-	} */
+	} 
 	.contact__split{
 		grid-template-columns: 2fr 1fr;
 	}
@@ -55,4 +62,4 @@
 	.contact__address{
 		margin-bottom: 40px;
 	}
-}
+} */
