--- a/css/bem.css
+++ b/css/bem.css
@@ -1,50 +1,3 @@
-/* .column__margin-left {
-    margin-left: 85px;
-}
-
-.column__margin-right {
-    margin-right: 85px;
-}
-
-.column__first {
-    margin-top: 100px;
-}
-
-.column__paragraph {
-    margin-top: 10px;
-}
-
-.column__list-item {
-    margin-top: 20px;
-}
-
-.column__article {
-    margin-top: 30px;
-}
-
-.column__item {
-    margin-top: 45px;
-}
-
-.column__last {
-    margin-bottom: 120px
-} */
-
-
-
-.container__flex {
-    color: white;
-    max-width: 500px;
-    padding-left: 40px;
-    padding-top: 20%;
-}
-
-.article {}
-
-
-
-
-
 .image {
     width: 100%;
     
@@ -106,19 +59,17 @@
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.5);
 }
 
-.services__item {
-    width: 400px;
-    height: 100px;
+.service {
     background-color: #fff;
-    display: flex;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.5);
-
+    height: 100px;
+    max-width: 400px;
 }
 
-.services__item-name {
-    width: 300px;
+.service__name {
     border-right: 1px solid #9d9d9d;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -129,13 +80,14 @@
     color: rgb(38, 38, 38);
 }
 
-.services__item-icon {
-    width: 99px;
-    height: 100%;
-    text-align: center;
-    line-height: 100px;
+.service__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.services__item-icon img {
-    vertical-align: middle;
+.service__img{
+    max-width: 100%;
+    max-height: 100%;
 }
+
