--- a/css/page.css
+++ b/css/page.css
@@ -1,104 +1,35 @@
-.home {
-    min-height: 100vh;
-    grid-column: span 12;
-}
-    .home__description{
-        max-width: 370px;
-        margin-bottom: 30px;
-    }
+.page{
 
-.about{
-    padding-top: 100px;
-    padding-bottom:100px;
 }
-    .about__picture {
+
+    .page__about-picture {
         grid-column: span 6;
     }
-    .about__description {
-        grid-column: 8 / 13;
+    .page__about-description {
+        grid-column: span 6;
+        padding-left: 15%;
     }
 
-.our-services{
-    padding-top: 100px;
-    padding-bottom:150px;
-}
-    .our-services__list{
-        grid-column: 2 / 6;
-        margin-top: 80px;
+    .page__services-list{
+        grid-column: span 6;
+        max-width: 500px;
+        margin: 80px auto 0;
     }
-    .our-services__picture{
-        grid-column: 7 / 13;
+    .page__services-picture{
         background-image: url(../img/tomatos-parts.png);
         background-repeat: no-repeat;
         background-position: right;
         background-size: contain;
         background-origin: content-box;
+        grid-column: span 6;
+        padding-left: 10%;
     }
 
-.gallery-section{
-    padding-top: 100px;
-    padding-bottom:120px;
-    grid-column: span 12;
-}
-    .gallery-section__description{
-        max-width: 577px;
-        margin-bottom: 30px;
-    }
-    .gallery-section__gallery{
-        margin-top: 15px;
-        margin-bottom: 45px;
-    } 
-
-.subscribe{
-    padding-top: 150px;
-    padding-bottom:150px;
-    grid-column: span 12;
-
-}
-    .subscribe__description{
-        max-width: 570px;
-        margin-bottom: 30px;
-    }
-    .subscribe__form{
-        display: inline;
-        max-width: 770px;
-    }
-
-.blog-section {
-    padding-top: 100px;
-    padding-bottom:120px;
-    grid-column: span 12;
-}
-    .blog-section__description{
-        max-width: 570px;
-        margin-bottom: 30px;
-    }
-    .blog-section__images{
-        margin-bottom: 50px;
-        width: 100%;
-    }
-
-.contact{
-    padding-top: 100px;
-    padding-bottom:120px;
-    grid-column: span 12;
-}
-    .contact__description{
-        margin-bottom: 30px;
-        max-width: 350px;
-    }
-    .contact__content{
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-    }
     .contact__form{
-        grid-column: span 5;
+        grid-column: span 6;
+        max-width: 500px;
     }
     .contact__address{
-        grid-column: 8 / 13;
+        grid-column: span 6;
+        padding-left: 10%;
     }
-
-.footer-section{
-    grid-column: span 12;
-}
