--- a/css/bem.css
+++ b/css/bem.css
@@ -1,6 +1,5 @@
 .image {
     width: 100%;
-    
 }
 .image--bigger{
     transform: scale(1.20);
@@ -18,6 +17,29 @@
         "medium-1 medium-1 medium-1 medium-2 medium-2 medium-2"
         "medium-1 medium-1 medium-1 medium-2 medium-2 medium-2"
         "medium-1 medium-1 medium-1 medium-2 medium-2 medium-2"
+}
+@media only screen and (max-width: 768px) {
+    .gallery {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas:
+            "big      big"
+            "big      big"
+            "small-1  small-2"
+            "medium-1 medium-2"
+    }
+    @media o
+}
+
+@media only screen and (max-width: 576px) {
+    .gallery {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "big"
+            "small-1"
+            "small-2"
+            "medium-1"
+            "medium-2";
+    }
 }
 
 .gallery__item {
