--- a/css/article.css
+++ b/css/article.css
@@ -6,6 +6,12 @@
         padding-top: 100px;
         padding-bottom:120px;
     }
+    @media only screen and (max-width: 991px) {
+        .article--space {
+            padding-top: 75px;
+            padding-bottom:90px;
+        }
+    }
     .article--full{
         min-height: 100vh;
     }
