--- a/css/footer.css
+++ b/css/footer.css
@@ -22,3 +22,10 @@
 .footer a:focus{
 	color: rgb(0, 196, 196);
 }
+
+@media only screen and (max-width: 576px) {
+	.footer{
+		flex-direction: column;
+		height: 150px;
+	}
+}
