--- a/css/text.css
+++ b/css/text.css
@@ -12,6 +12,16 @@
     font-size: 90px;
     font-weight: 700;
 }
+@media only screen and (max-width: 1200px) {
+    .text__heading{
+        font-size: 80px;
+    }
+}
+@media only screen and (max-width: 576px) {
+    .text__heading{
+        font-size: 60px;
+    }
+}
     .text__heading--small {
         font-size: 40px;
     }
